re-wrote test cases for resource and refactored the code